<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>JSDB</groupId>
  <artifactId>JSDB</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  
  <properties>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven.compiler.source>1.7</maven.compiler.source>
		<spring.version>3.2.8.RELEASE</spring.version>
		<jersey.version>1.19</jersey.version>
		<timestamp>${maven.build.timestamp}</timestamp>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
	</properties>
  
  <dependencies>
  	<dependency>
        <groupId>org.jboss.spec.javax.annotation</groupId>
        <artifactId>jboss-annotations-api_1.1_spec</artifactId>
        <version>1.0.0.Final</version>
      </dependency>
  	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
		<version>${spring.version}</version>
	</dependency>
  	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
		<version>${spring.version}</version>
	</dependency>
	<!-- Jersey + Spring -->
	<dependency>
		<groupId>com.sun.jersey</groupId>
		<artifactId>jersey-server</artifactId>
		<version>${jersey.version}</version>
	</dependency>
	<dependency>
		<groupId>com.sun.jersey</groupId>
		<artifactId>jersey-json</artifactId>
		<version>${jersey.version}</version>
	</dependency>
	<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-spring</artifactId>
			<version>${jersey.version}</version>
		<exclusions>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring</artifactId>
			</exclusion>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
			</exclusion>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
			</exclusion>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
			</exclusion>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
			</exclusion>
			<exclusion>
				<groupId>org.springframework</groupId>
				<artifactId>spring-aop</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.14</version>
	</dependency>
	<dependency>
		<groupId>org.codehaus.jettison</groupId>
		<artifactId>jettison</artifactId>
		<version>1.3</version>
	</dependency>
  </dependencies>
  
  <build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.1</version>
				<executions>
					<execution>
						<goals>
							<goal>copy</goal>
						</goals>
						<configuration>
							<!-- Configure the plugin to copy the jar containing javax.annotation.* 
								to a folder named "endorsed" within the project's build directory -->
							<artifactItems>
								<artifactItem>
									<groupId>org.jboss.spec.javax.annotation</groupId>
									<artifactId>jboss-annotations-api_1.1_spec</artifactId>
								</artifactItem>
							</artifactItems>
							<outputDirectory>${project.build.directory}/endorsed</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<!-- Setup the compiler plugin to use the endorsed directory containing 
						the jar for javax.annotation.* classes. Remember that we setup this folder 
						via the maven-dependency-plugin configuration, above. -->
					<compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed</compilerArgument>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
					<webResources>
						<resource>
							<!-- this is relative to the pom.xml directory -->
							<directory>src/main/webapp</directory>
						</resource>
						<resource>
							<filtering>true</filtering>
							<directory>src/main/resources</directory>
							<includes>
								<include>war.properties</include>
							</includes>
							<targetPath>WEB-INF</targetPath>
						</resource>
					</webResources>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>-XX:-UseSplitVerifier</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.bitstrings.maven.plugins</groupId>
				<artifactId>dependencypath-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<id>set-all</id>
						<goals>
							<goal>set</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>local</id>
			<!-- clean install jboss-as:run -Djboss.socket.binding.port-offset=100 -Djava.net.preferIPv4Stack=true -->
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-war-plugin</artifactId>
						<version>2.3</version>
						<configuration>
							<webXml>src/main/webapp/WEB-INF/web.xml</webXml>
							<webResources>
								<resource>
									<filtering>true</filtering>
									<!-- this is relative to the pom.xml directory -->
									<directory>src/main/webapp</directory>
									<includes>
										<!--<include>META-INF/jboss-deployment-structure.xml</include>-->
										<include>WEB-INF/jboss-web.xml</include>
										<include>WEB-INF/application-context.xml</include>
										<include>WEB-INF/log4j.properties</include>
										<include>WEB-INF/jsdb.properties</include>
									</includes>
								</resource>
								<resource>
									<filtering>true</filtering>
									<directory>src/main/resources</directory>
									<includes>
										<include>war.properties</include>
									</includes>
									<targetPath>WEB-INF</targetPath>
								</resource>
							</webResources>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.jboss.as.plugins</groupId>
						<artifactId>jboss-as-maven-plugin</artifactId>
						<version>7.7.Final</version>
						<configuration>
							<!--<port>8081</port>-->
					      <jvmArgs>-Xdebug -Xnoagent -Djava.compiler=NONE -Djava.net.preferIPv4Stack=true -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9988 -Xms512m -Xmx512m -XX:MaxPermSize=512M -XX:+CMSClassUnloadingEnabled -XX:+CMSPermGenSweepingEnabled -Dorg.apache.coyote.http11.Http11Protocol.COMPRESSION=on</jvmArgs>
					    </configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>